--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,12 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+    background-image: url("../images/cover-image-dark.png");
+    background-repeat: repeat;
+    min-width: 375px;
+    max-width: 768px;
+}
+.logo_word::after{
+    content: "";
+
 }
