--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,57 +1,26 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-body {
-
+:root.theme-dark {
+    /* Дублируем переменные для тёмной темы */
+    --bg-image: url(../images/cover-image-dark.png);
+    --large-text-size: clamp(7.25rem, 5.7694rem + 6.3174vw, 9.8125rem);
+    --main-text-size: 18px;
+    --main-text-lh: 1.3;
+    --padding: 0 2.6%;
+    --accent-color-text: #FF0070;
+    --main-text-color: #F1B2CE;
+    --accent-color-bg: #FF0070;
+    --header-text: #DB00FF;
+    --bg-color: #000028;
+    --title-decor-text: #000028;
+    --font: 'IBM Plex Mono', monospace;
 }
+
 .page.theme_dark {
-    margin: 0;
-    max-width: 1440px;
-    min-width: 375px;
-    background-image: url("../images/cover-image-dark.png");
-    width: 100%;
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
-
-
-
-}
-.header {
-
-}
-
-.rec_logo__container::after {
-    content: "";
-    background-image: url("../images/Rectangle 77.png");
-    background-repeat: no-repeat;
-    width: 30px;
-    height: 25px;
-    display: inline-block;
-    position: relative;
-    right: 8%;
-
-}
-.rec_logo__container {
-    display: flex;
-    gap: 10px;
-}
-.logo_word {
-    color: #FF0070;
-    font-family: 'IBM Plex mono';
-}
-.logo_word::after{
-    position: relative;
-    margin-left: 10px;
-    bottom: 5%;
-    content: "";
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    box-shadow: 0 0 4px 2px #FF0070;
-    background-color: #FF0070;
-    display: inline-block;
+    .header__theme-menu-button_type_dark {
+        outline: 1px solid var(--accent-color-text);
+        display: inline-flex;
+        height: 26px;
+        padding: 0px 13px;
+        justify-content: center;
+        align-items: center;
+    }
 }
