--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,6 @@ body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
   margin: 0 auto;
-
 }
 
 h1,
@@ -40,4 +39,8 @@ a {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
+}
+
+footer {
+  position: relative;
 }
