--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,66 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
+:root.theme_light {
+    /* Переменные светлой темы */
+    --bg-image: url(../images/cover-image-light.png);
+    --accent-color-text: #353430;
+    --main-text-color: #353430;
+    --accent-color-bg: #FF8DCB;
+    --header-text: #FFC2E6;
+    --bg-color: #FFF1F7;
+    --title-decor-text: #000028;
+    --font: 'IBM Plex Mono', monospace;
+    --hover-color: rgba(50, 49, 45, 0.40);
+}
+
+@media (prefers-color-scheme: light) {
+    :root {
+        --bg-image: url(../images/cover-image-light.png);
+        --accent-color-text: #353430;
+        --main-text-color: #353430;
+        --accent-color-bg: #FF8DCB;
+        --header-text: #FFC2E6;
+        --bg-color: #FFF1F7;
+        --title-decor-text: #000028;
+        --font: 'IBM Plex Mono', monospace;
+        --hover-color: rgba(50, 49, 45, 0.40);
+    }
+}
 
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+    --bg-image: url(../images/cover-image-light.png);
+    --accent-color-text: #353430;
+    --main-text-color: #353430;
+    --accent-color-bg: #FF8DCB;
+    --header-text: #FFC2E6;
+    --bg-color: #FFF1F7;
+    --title-decor-text: #000028;
+    --font: 'IBM Plex Mono', monospace;
+    --hover-color: rgba(50, 49, 45, 0.40);
+
+    .tag__marker {
+        visibility: hidden;
+    }
+
+    .header__theme-menu-button_type_light {
+        outline: 1px solid var(--accent-color-text);
+        display: inline-flex;
+        height: 26px;
+        padding: 0px 13px;
+        justify-content: center;
+        align-items: center;
+    }
 }
+
+/* .page.theme_light { 
+  .tag__marker {
+    visibility: hidden;
+  }
+  
+  .header__theme-menu-button_type_light {
+    outline: 1px solid var(--accent-color-text);
+    display: inline-flex;
+    height: 26px;
+    padding: 0px 13px;
+    justify-content: center;
+    align-items: center;
+  }
+} */
