--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,26 +1,62 @@
-:root.theme-dark {
-    /* Дублируем переменные для тёмной темы */
-    --bg-image: url(../images/cover-image-dark.png);
-    --large-text-size: clamp(7.25rem, 5.7694rem + 6.3174vw, 9.8125rem);
-    --main-text-size: 18px;
-    --main-text-lh: 1.3;
-    --padding: 0 2.6%;
-    --accent-color-text: #FF0070;
-    --main-text-color: #F1B2CE;
-    --accent-color-bg: #FF0070;
-    --header-text: #DB00FF;
-    --bg-color: #000028;
-    --title-decor-text: #000028;
-    --font: 'IBM Plex Mono', monospace;
-}
+/*
+  Специально для тёмной темы при наличии класса,
+  здесь окажутся стили, которые нужно переопределить принудительно,
+  переключая тему
+*/
 
 .page.theme_dark {
-    .header__theme-menu-button_type_dark {
-        outline: 1px solid var(--accent-color-text);
-        display: inline-flex;
-        height: 26px;
-        padding: 0px 13px;
-        justify-content: center;
-        align-items: center;
+    /* сохраните этот селектор в приведённом виде.
+      Так стили написанные ниже будут иметь больший вес,
+      чем стили в медиазапросе предпочтений пользователя
+    */
+    --main-font: "IBM Plex mono";
+    --bg-color: #000028;
+    --text-color: #f1b2ce;
+    --accent-color: #ff0070;
+    --section-title-color: #ff0070;
+    --title-color: #000028;
+    --header-color: #db00ff;
+    --bg-image: url(../images/cover-image-dark.png);
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --main-font: "IBM Plex mono";
+        --bg-color: #000028;
+        --text-color: #f1b2ce;
+        --section-title-color: #ff0070;
+        --accent-color: #ff0070;
+        --title-color: #000028;
+        --header-color: #db00ff;
+        --bg-image: url(../images/cover-image-dark.png);
     }
+    .header_item::before {
+        display: block;
+        visibility: visible;
+    }
+
+    .header_item::after {
+        display: block;
+        visibility: visible;
+    }
+
+    .header__theme-menu-button:hover {
+        outline: 1px solid rgba(255, 0, 112, 0.4);
+        padding: 0 13px;
+    }
+}
+
+.page.theme_dark .header_item::after {
+    display: block;
+    visibility: visible;
+}
+
+.page.theme_dark .header_item::before {
+    display: block;
+    visibility: visible;
+}
+
+.page.theme_dark .header__theme-menu-button:hover {
+    outline: 1px solid rgba(255, 0, 112, 0.4);
+    padding: 0 13px;
 }
