--- a/styles/light.css
+++ b/styles/light.css
@@ -1,66 +1,73 @@
-:root.theme_light {
-    /* Переменные светлой темы */
+/*
+  Специально для светлой темы при наличии класса.
+  Здесь окажутся стили, которые нужно переопределить принудительно,
+  переключая тему
+*/
+
+.page.theme_light {
+    /* сохраните этот селектор в приведённом виде.
+      Так стили написанные ниже будут иметь больший вес,
+      чем стили в медиазапросе предпочтений пользователя
+    */
+    --main-font: "IBM Plex mono";
+    --bg-color: #fff1f7;
+    --text-color: #353430;
+    --accent-color: #ff8dcb;
+    --section-title-color: #353430;
+    --title-color: #353430;
+    --header-color: #ffc2e6;
     --bg-image: url(../images/cover-image-light.png);
-    --accent-color-text: #353430;
-    --main-text-color: #353430;
-    --accent-color-bg: #FF8DCB;
-    --header-text: #FFC2E6;
-    --bg-color: #FFF1F7;
-    --title-decor-text: #000028;
-    --font: 'IBM Plex Mono', monospace;
-    --hover-color: rgba(50, 49, 45, 0.40);
 }
 
 @media (prefers-color-scheme: light) {
     :root {
+        --main-font: "IBM Plex mono";
+        --bg-color: #fff1f7;
+        --text-color: #353430;
+        --accent-color: #ff8dcb;
+        --section-title-color: #353430;
+        --title-color: #353430;
+        --header-color: #ffc2e6;
         --bg-image: url(../images/cover-image-light.png);
-        --accent-color-text: #353430;
-        --main-text-color: #353430;
-        --accent-color-bg: #FF8DCB;
-        --header-text: #FFC2E6;
-        --bg-color: #FFF1F7;
-        --title-decor-text: #000028;
-        --font: 'IBM Plex Mono', monospace;
-        --hover-color: rgba(50, 49, 45, 0.40);
     }
-}
-
-.page.theme_light {
-    --bg-image: url(../images/cover-image-light.png);
-    --accent-color-text: #353430;
-    --main-text-color: #353430;
-    --accent-color-bg: #FF8DCB;
-    --header-text: #FFC2E6;
-    --bg-color: #FFF1F7;
-    --title-decor-text: #000028;
-    --font: 'IBM Plex Mono', monospace;
-    --hover-color: rgba(50, 49, 45, 0.40);
-
-    .tag__marker {
+    .header_item::before {
+        display: none;
         visibility: hidden;
     }
 
-    .header__theme-menu-button_type_light {
-        outline: 1px solid var(--accent-color-text);
-        display: inline-flex;
-        height: 26px;
-        padding: 0px 13px;
-        justify-content: center;
-        align-items: center;
+    .header_item::after {
+        display: none;
+        visibility: hidden;
+    }
+    .header__theme-menu-button:hover {
+        outline: 1px solid rgba(50, 49, 45, 0.4);
+        padding: 0 13px;
     }
 }
 
-/* .page.theme_light { 
-  .tag__marker {
+@media (width >= 1024px) {
+    .page.theme_light .header_title {
+        text-shadow: 4px 4px 0 #ff0070;
+    }
+}
+
+@media (width >= 1024px) {
+    .page.theme_auto .header_title {
+        text-shadow: 4px 4px 0 #ff0070;
+    }
+}
+
+.page.theme_light .header_item::after {
+    display: none;
     visibility: hidden;
-  }
-  
-  .header__theme-menu-button_type_light {
-    outline: 1px solid var(--accent-color-text);
-    display: inline-flex;
-    height: 26px;
-    padding: 0px 13px;
-    justify-content: center;
-    align-items: center;
-  }
-} */
+}
+
+.page.theme_light .header_item::before {
+    display: none;
+    visibility: hidden;
+}
+
+.page.theme_light .header__theme-menu-button:hover {
+    outline: 1px solid rgba(50, 49, 45, 0.4);
+    padding: 0 13px;
+}
