--- a/styles/style.css
+++ b/styles/style.css
@@ -1,442 +1,388 @@
+/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
+
 .page {
-    background-attachment: fixed;
-    min-width: 375px;
+    /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+    background-image: var(--bg-image);
     background-color: var(--bg-color);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    font-family: var(--main-font, monospace);
+    background-size: cover;
+}
+
+.text_content {
+    color: var(--text-color);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 130%;
+}
+
+.section_title {
+    color: var(--section-title-color);
+    font-weight: 700;
+    margin-block-end: 20px;
+}
+
+.title_decor {
+    background-color: var(--accent-color);
+    font-weight: 700;
+    color: var(--title-color);
+}
+
+.li_title_decor {
+    font-weight: 400;
+}
+
+.content-section {
+    padding: 10px 10px;
+}
+
+.content-section {
+    margin-block-end: 30px;
+}
+
+.header_title {
+    color: var(--header-color, #db00ff);
+    text-shadow: 4px 4px 0 var(--accent-color);
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    font-weight: 700;
+    line-height: 82.5%; /* 95.7px */
+}
+
+.header__theme-menu-button {
+    border: transparent;
+    padding: 0;
+    color: var(--section-title-color);
+    font-size: 18px;
+    background-color: transparent;
+    cursor: pointer;
+    text-transform: lowercase;
+}
+
+.header__theme-menu-button_active {
+    padding: 0 13px;
+    outline: 1px solid var(--section-title-color);
 }
 
 .header {
-    background: var(--bg-image);
-    background-position: center;
-    display: flex;
-    background-repeat: no-repeat;
-    background-size: cover;
-    flex-direction: column;
-    padding: 2.8vw;
-    margin-bottom: 10.667%;
-    position: relative;
-    min-height: 668px;
-    height: 100vh;
+    display: grid;
+    grid-template-rows: 0 1fr min-content 1fr;
+    min-block-size: 100vh;
 }
 
-@media (width >= 768px) {
-    .header {
-        padding: 2.6vw;
-        margin-bottom: 7.813%;
-    }
-}
-
-@media (width >= 1024px) {
-    .header {
-        padding: 1.95vw;
-        margin-bottom: 5.86vw;
-    }
-}
-
-.decorated-zone::before {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 25px;
-    height: 25px;
-    border-top: 1px solid var(--accent-color-text);
-    border-right: 1px solid var(--accent-color-text);
-    top: 10px;
-    right: 10px;
-}
-
-.decorated-zone::after {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 25px;
-    height: 25px;
-    border-bottom: 1px solid var(--accent-color-text);
-    border-left: 1px solid var(--accent-color-text);
-    bottom: 10px;
-    left: 10px;
-}
-
-@media (width >= 768px) {
-    .decorated-zone::before {
-        top: 20px;
-        right: 20px;
-    }
-
-    .decorated-zone::after {
-        bottom: 20px;
-        left: 20px;
-    }
-}
-
-.tag__marker {
-    color: var(--accent-color-text);
-    text-align: center;
-    font-family: var(--font);
-    font-size: var(--main-text-size);
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.38;
-    display: flex;
-    justify-content: end;
-    padding-right: 9px;
-    text-transform: uppercase;
-}
-
-.tag__marker::after {
-    content: url("http://www.w3.org/2000/svg");
-    display: inline-block;
-    width: 9px;
-    height: 9px;
-    background-color: var(--accent-color-bg);
-    border-radius: 50%;
-    filter: drop-shadow(0px 0px 4px var(--accent-color-bg));
-    margin-left: 10px;
-    margin-top: 8px;
+.header__theme-menu {
+    justify-self: flex-end;
+    align-self: center;
+    margin-block-start: -6px;
 }
 
 .header__theme-menu-list {
     display: flex;
     flex-direction: column;
-    align-content: flex-end;
-    flex-wrap: wrap;
-    align-items: center;
-    gap: 10px;
-    padding-top: 40.5px;
-    padding-bottom: 65px;
+    justify-content: center;
+    gap: 13px;
 }
 
-@media (width >= 768px) {
-    .header__theme-menu-list {
-        padding-top: 14.4vh;
-        padding-bottom:  17.04vh;
-    }
-}
-
-@media (width >= 1024px) {
-    .header__theme-menu-list {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        gap: 10px;
-        margin-top: -27px;
-        padding-top: 0;
-    }
-}
-
-.header__theme-menu-item:focus-visible {
-    outline: none;
-}
-
-.header__theme-menu-button {
-    color: var(--accent-color-text);
+.header__theme-menu-item {
     text-align: center;
-    font-family: var(--font);
-    font-size: var(--main-text-size);
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1;
-    background-color: transparent;
-    border: none;
-    height: 26px;
-    padding: 0px 13px;
 }
 
-.header__theme-menu-button:hover {
-    outline: 1px solid var(--hover-color);
-    display: inline-flex;
-    padding: 0px 13px;
-    justify-content: center;
-    align-items: center;
+.header_title {
+    align-self: center;
+    justify-self: flex-start;
 }
 
-.header__theme-menu-button:focus-visible {
-    border-bottom: 1px solid var(--accent-color-text);
-    outline: none;
-    display: inline-flex;
-    padding: 0px 13px;
-    justify-content: center;
-    align-items: center;
+.header_title:last-child {
+    text-align: center;
 }
 
-.page__title {
-    color: var(--header-text);
-    text-shadow: 4px 4px 0px var(--accent-color-bg);
-    font-family: var(--font);
-    font-size: var(--large-text-size);
-    font-style: normal;
-    font-weight: 700;
-    line-height: 82.5%;
+.header_paragraph {
+    margin-block-start: 56px;
+    margin-block-end: 56px;
+    align-self: center;
+    justify-self: flex-end;
 }
 
-@media (width >= 768px) {
-    .page__title {
-        margin-left: -20px;
-        font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-    }
-}
-
-.title-decor {
-    color: var(--title-decor-text);
-    font-family: var(--font);
-    font-size: var(--main-text-size);
-    font-style: normal;
-    font-weight: 700;
-    line-height: var(--main-text-lh);
-    background-color: var(--accent-color-bg, #ff0070);
-    white-space: pre-line;
-}
-
-@media (width >= 768px) {
-    .header__paragraph {
-        max-width: 364px;
-        width: 100%;
-        margin-left: 364px;
-    }
-}
-
-@media (width >= 1024px) {
-    .header__paragraph {
-        max-width: 491px;
-        width: 100%;
-        margin-left: 493px;
-    }
-}
-
-.header__text {
-    padding-bottom: 58px;
-}
-
-@media (width >= 768px) {
-    .header__text {
-        padding-bottom: 15.8vh;
-    }
-}
-
-@media (width >= 1024px) {
-    .header__text {
-        padding-top: 100px;
-        padding-bottom: 116px;
-    }
-}
-
-.main__content {
-    padding: var(--padding);
-}
-
-@media (width >= 1024px) {
-    .main__content {
-        padding: 0 1.95vw;
-    }
-}
-
-.external-link {
-    color: var(--main-text-color);
-    font-family: var(--font);
-    font-size: var(--main-text-size);
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-decoration: none;
-    text-shadow: 1px 1px 0px var(--accent-color-bg);
-}
-
-.external-link:hover {
-    border-block-end: 1px solid var(--accent-color-text);
-}
-
-.external-link:focus-visible {
-    outline: 1px solid var(--accent-color-text);
+.header_paragraph span:first-of-type {
     display: inline-block;
-    height: 20px;
 }
 
-.content-section {
+.decorated-zone {
+    position: relative;
+}
+
+.decorated-zone::before {
+    content: "";
+    position: absolute;
+    justify-self: flex-end;
+    inset-inline-end: 10px;
+    inset-block-start: 10px;
+    border-top: 1px solid var(--section-title-color);
+    border-right: 1px solid var(--section-title-color);
+    inline-size: 25px;
+    block-size: 25px;
+}
+
+.decorated-zone::after {
+    content: "";
+    position: absolute;
+    justify-self: flex-start;
+    inset-inline-start: 10px;
+    inset-block-end: 10px;
+    border-bottom: 1px solid var(--section-title-color);
+    border-left: 1px solid var(--section-title-color);
+    inline-size: 25px;
+    block-size: 25px;
+}
+
+.header_item {
+    justify-self: flex-end;
+    position: relative;
+}
+
+.header_item::before {
+    content: "REC";
+    position: absolute;
+    font-family: var(--main-font, monospace);
+    font-size: 18px;
+    color: var(--accent-color);
+    inset-inline-end: 28px;
+}
+
+.header_item::after {
+    content: "";
+    position: absolute;
+    inline-size: 9px;
+    block-size: 9px;
+    background-color: var(--accent-color);
+    border-radius: 50%;
+    filter: drop-shadow(0px 0px 4px #ff0070);
+    inset-block-start: 8px;
+    inset-inline-end: 9px;
+}
+
+.content_list {
     display: grid;
-    padding-bottom: 30px;
+    gap: 20px;
 }
-
-
-@media (width >= 768px) {
-    .content-section {
-        padding-bottom: 60px;
-    }
-}
-
-@media (width >= 768px) {
-    .content-section:nth-child(2n + 1) {
-        grid-template-columns: 1fr 2fr;
-        gap: 20px;
-    }
-
-    @media (width >= 1024px) {
-        .content-section:nth-child(2n + 1) {
-            gap: 10px;
-        }
-    }
-
-    .content-section__item .content-section:nth-child(2n + 1) {
-        grid-row: 1 / span 2;
-        grid-column: 2 / 3;
-    }
-}
-
-@media (width >= 768px) {
-    .content-section:nth-child(2) .content-section__title {
-        max-width: 236px;
-    }
-}
-
-@media (width >= 1024px) {
-    .content-section__list:first-of-type {
-        max-width: 649px;
-    }
-
-    .content-section:first-of-type .content-section__title {
-        max-width: 315px;
-    }
-
-    .content-section__list:last-of-type {
-        max-width: 648px;
-    }
-
-    .content-section:nth-child(3) .content-section__title {
-        max-width: 315px;
-    }
-}
-
-@media (width >= 1024px) {
-    .content-section:nth-child(2) .content-section__title {
-        max-width: 315px;
-    }
-
-    .content-section:nth-child(2) .content-section__list {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 20px;
-        max-width: 984px;
-    }
-}
-
-.content-section__title {
-    color: var(--accent-color-text);
-    font-family: var(--font);
-    font-size: var(--main-text-size);
-    font-style: normal;
-    font-weight: 700;
-    line-height: var(--main-text-lh);
-    padding-bottom: 20px;
-}
-
-.content-section__item {
-    padding-bottom: 20px;
-}
-
-.content-section__text {
-    color: var(--main-text-color);
-    font-family: var(--font);
-    font-size: var(--main-text-size);
-    font-style: normal;
-    font-weight: 400;
-    line-height: var(--main-text-lh);
-    padding-top: 10px;
-}
-
-.content-section__subtitle {
-    color: var(--title-decor-text);
-    font-family: var(--font);
-    font-size: var(--main-text-size);
-    font-style: normal;
-    font-weight: 400;
-    line-height: var(--main-text-lh);
-    background-color: var(--accent-color-bg);
-}
-
-.margin {
-    margin-top: 20px;
-}
-
-.content-section__images {
+.content_list-item {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 10px;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
 }
 
-.content-section__images img {
-    width: 100%;
-    height: 100%;
-    display: block;
-    object-fit: cover;
+.content_picture {
+    inline-size: 100%;
+    object-fit: contain;
     object-position: center;
 }
 
-@media (width >= 768px) {
-    .content-section__images {
-        display: grid;
-        gap: 20px;
-        grid-template-columns: repeat(3, minmax(min-content, max-content));
-        grid-template-rows: repeat(3, minmax(min-content, max-content));
-        grid-template-areas:
-      "sunset sunset ice-cream"
-      "tape books ice-cream"
-      "tape street street";
-        width: 100%;
-        height: 100%;
-        margin-top: 20px;
-    }
-
-    .sunset {
-        grid-area: sunset;
-    }
-
-    .ice-cream {
-        grid-area: ice-cream;
-    }
-
-    .tape {
-        grid-area: tape;
-    }
-
-    .books {
-        grid-area: books;
-    }
-
-    .street {
-        grid-area: street;
-    }
+.article_content {
+    display: grid;
+    margin-block-start: 10px;
+    gap: 6px;
+    margin-block-end: -4px;
 }
 
 .footer {
+    min-block-size: 100vh;
     display: flex;
-    justify-content: center;
-    height: 100vh;
-    min-height: 668px;
-}
-
-.footer-title {
-    color: var(--header-text);
-    text-shadow: 2px 2px 0px var(--accent-color-bg);
-    font-family: var(--font);
-    font-size: var(--large-text-size);
-    font-style: normal;
-    font-weight: 700;
-    line-height: 82.5%;
-    display: flex;
-    width: 100%;
-    height: 100vh;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    margin-top: 10px;
-    flex-wrap: wrap;
-    align-content: center;
+    justify-content: center;
+    padding: 10px;
 }
 
-@media (width >= 768px) {
-    .footer-title {
+a {
+    text-decoration: none;
+    text-shadow: 2px 1px 0 var(--accent-color);
+}
+
+.header__theme-menu-button:hover {
+    outline: 1px solid rgba(255, 0, 112, 0.4);
+    padding: 0 13px;
+}
+
+.header__theme-menu-button:focus-visible {
+    outline: none;
+    border-bottom: 1px solid var(--section-title-color);
+    inline-size: 66px;
+}
+
+a:hover {
+    border-bottom: 1px solid var(--text-color);
+}
+
+a:focus-visible {
+    outline: 1px solid var(--text-color);
+}
+
+@media (min-width: 768px) {
+    .content-section {
+        padding: 20px 20px;
+    }
+}
+
+@media (min-width: 768px) {
+    .header_paragraph {
+        inline-size: 50%;
+    }
+}
+
+@media (min-width: 768px) {
+    .decorated-zone::before {
+        inset-inline-end: 20px;
+        inset-block-start: 20px;
+    }
+}
+
+@media (min-width: 768px) {
+    .decorated-zone::after {
+        inset-inline-start: 20px;
+        inset-block-end: 20px;
+    }
+}
+
+@media (min-width: 768px) {
+    .header_title-decoration {
+        margin-inline-start: -20px;
+    }
+}
+
+@media (min-width: 768px) {
+    .content-section-decorated:nth-child(1) {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        gap: 20px;
+    }
+}
+
+@media (min-width: 768px) {
+    .content-section {
+        margin-block-end: 40px;
+    }
+}
+
+@media (min-width: 768px) {
+    .section_title {
+        margin-block-end: 0;
+    }
+}
+
+@media (min-width: 768px) {
+    .section_title-decoration {
+        inline-size: calc(100% / 3 - 40px);
+    }
+}
+
+@media (min-width: 768px) {
+    .content-section-decorated:nth-child(2) {
+        display: grid;
+        grid-template-rows: min-content 1fr;
+        gap: 20px;
+    }
+}
+
+@media (min-width: 768px) {
+    .content-section-decorated:nth-child(3) {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        gap: 20px;
+    }
+}
+
+@media (min-width: 768px) {
+    .content-section-decorated:nth-child(4) {
+        display: grid;
+        gap: 10px;
+    }
+}
+
+@media (min-width: 768px) {
+    .article_content {
+        display: grid;
+        grid-template-columns:
+      minmax(min-content, max-content) minmax(min-content, max-content)
+      minmax(min-content, max-content);
+        grid-template-rows:
+      minmax(min-content, max-content) minmax(min-content, max-content)
+      minmax(min-content, max-content) minmax(min-content, max-content);
+        gap: 13px 20px;
+        margin-block-end: 2px;
+    }
+}
+
+@media (min-width: 768px) {
+    .content_picture {
+        block-size: 100%;
+        object-fit: cover;
+    }
+}
+
+@media (min-width: 768px) {
+    .picture:nth-child(1) {
+        grid-row: 1 / 2;
+        grid-column: 1 / 3;
+    }
+}
+
+@media (min-width: 768px) {
+    .picture:nth-child(2) {
+        grid-row: 1 / 3;
+        grid-column: 3 / 4;
+    }
+}
+
+@media (min-width: 768px) {
+    .picture:nth-child(3) {
+        grid-row: 2 / 5;
+        grid-column: 1 / 2;
+    }
+}
+
+@media (min-width: 768px) {
+    .picture:nth-child(5) {
+        grid-row: 3 / 5;
+        grid-column: 2 / 4;
+    }
+}
+
+@media (min-width: 768px) {
+    .header_title {
         font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-        margin: 0;
+    }
+}
+
+@media (min-width: 1024px) {
+    .content-section-decorated:nth-child(1) {
+        gap: 10px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .content_list-decorated {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        align-items: start;
+    }
+}
+
+@media (min-width: 1024px) {
+    .content-section-decorated:nth-child(3) {
+        gap: 10px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .header__theme-menu {
+        justify-self: center;
+        align-self: flex-start;
+        margin-block-start: 0;
+    }
+}
+
+@media (min-width: 1024px) {
+    .header__theme-menu-list {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
     }
 }
