--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,14 +3,14 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
-  /* border: 1px solid red; */
+    box-sizing: border-box;
+    /* border: 1px solid red; */
 }
 
 body {
-  min-inline-size: 375px;
-  max-inline-size: 1440px;
-  margin: 0 auto;
+    min-inline-size: 375px;
+    max-inline-size: 1440px;
+    margin: 0 auto;
 }
 
 h1,
@@ -20,24 +20,42 @@ h4,
 h5,
 h6,
 p {
-  margin: 0;
+    margin: 0;
 }
 
 ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
 picture {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 button,
 a {
-  color: currentColor;
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
+    color: currentColor;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+}
+
+a {
+    text-decoration: none;
+    text-shadow: 2px 1px 0 var(--accent-color);
+}
+
+a:hover {
+    border-bottom: 1px solid var(--text-color);
+}
+
+a:focus-visible {
+    outline: 1px solid var(--text-color);
+
+}
+
+a:focus {
+    outline: none;
 }
