--- a/styles/style.css
+++ b/styles/style.css
@@ -68,7 +68,8 @@
 .header {
     display: grid;
     grid-template-rows: 0 1fr min-content 1fr;
-    min-block-size: 100vh;
+    min-height: 668px;
+    height: 100vh;
 }
 
 .header__theme-menu {
@@ -166,6 +167,7 @@
     display: grid;
     gap: 20px;
 }
+
 .content_list-item {
     display: grid;
     gap: 10px;
@@ -185,17 +187,14 @@
 }
 
 .footer {
-    min-block-size: 100vh;
+    height: 100vh;
+    min-height: 668px;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 10px;
 }
 
-a {
-    text-decoration: none;
-    text-shadow: 2px 1px 0 var(--accent-color);
-}
 
 .header__theme-menu-button:hover {
     outline: 1px solid rgba(255, 0, 112, 0.4);
@@ -203,18 +202,15 @@ a {
 }
 
 .header__theme-menu-button:focus-visible {
-    outline: none;
     border-bottom: 1px solid var(--section-title-color);
     inline-size: 66px;
+    outline: none;
 }
 
-a:hover {
-    border-bottom: 1px solid var(--text-color);
+.header__theme-menu-button:focus {
+    outline: none;
 }
 
-a:focus-visible {
-    outline: 1px solid var(--text-color);
-}
 
 @media (min-width: 768px) {
     .content-section {
@@ -316,37 +312,27 @@ a:focus-visible {
         block-size: 100%;
         object-fit: cover;
     }
-}
 
-@media (min-width: 768px) {
     .picture:nth-child(1) {
         grid-row: 1 / 2;
         grid-column: 1 / 3;
     }
-}
 
-@media (min-width: 768px) {
     .picture:nth-child(2) {
         grid-row: 1 / 3;
         grid-column: 3 / 4;
     }
-}
 
-@media (min-width: 768px) {
     .picture:nth-child(3) {
         grid-row: 2 / 5;
         grid-column: 1 / 2;
     }
-}
 
-@media (min-width: 768px) {
     .picture:nth-child(5) {
         grid-row: 3 / 5;
         grid-column: 2 / 4;
     }
-}
 
-@media (min-width: 768px) {
     .header_title {
         font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     }
@@ -356,31 +342,23 @@ a:focus-visible {
     .content-section-decorated:nth-child(1) {
         gap: 10px;
     }
-}
 
-@media (min-width: 1024px) {
     .content_list-decorated {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         align-items: start;
     }
-}
 
-@media (min-width: 1024px) {
     .content-section-decorated:nth-child(3) {
         gap: 10px;
     }
-}
 
-@media (min-width: 1024px) {
     .header__theme-menu {
         justify-self: center;
         align-self: flex-start;
         margin-block-start: 0;
     }
-}
 
-@media (min-width: 1024px) {
     .header__theme-menu-list {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
